[project]
name = "watermarking"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.3",
    "pywavelets>=1.9.0",
    "scipy",
    "ipykernel>=7.1.0",
    "notebook>=7.5.0",
    "pillow>=12.0.0",
    "scikit-image>=0.25.2",
]

[dependency-groups]
test = [
    "fpdf2",
    "pillow",
    "scikit-image",
    "simplejpeg",
    "tifffile",
]
